Allow language interpreter to run on z/OS and s390x architecture.